--- a/style.css
+++ b/style.css
@@ -4,11 +4,12 @@ h1 {
 
 #startGame {
     margin-top : 40px;
+    margin-bottom: 20px;
 }
 
 .gameControls {
     text-align: center;
-    margin-top: 10%;
+    margin-top: 3%;
     margin-bottom: 2%;
 }
 
@@ -16,8 +17,8 @@ h1 {
     display: grid;
     grid-template-columns : 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
-    width: 30%;
-    height: 50%;
+    width: 500px;
+    height: 500px;;
     margin: auto;
     border: 2px solid;
     border-color: black;
@@ -31,6 +32,10 @@ h1 {
 img {
     max-width: 80%;
     max-height: 80%;
-    margin:auto;
-    display: block;
+    margin-left: 15px;
+    margin-top: 15px;
+}
+
+.gameInfos{
+    display:hidden;
 }
